hello-kubernetes/cluster2/hello-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-cluster
spec:
  host: hello.roks-ace-washington-wqzun-482b20c5178613e7a8446599e467c27e-0000.us-east.containers.appdomain.cloud
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: hello-kubernetes
    weight: 100
  wildcardPolicy: None
